  * Update the build dependencies according to the upstream build system:
    - bump Qt packages to 5.8.0
    - explicitly add gettext
  * Update the patches:
    - 0001-Fix-Package-supportedUntil-never-getting-the-date.patch: drop,
      backported from upstream
    - apt-1.9.0.patch: drop, fixed upstream
    - apt-1.9.11.patch: drop, fixed upstream
  * Update Vcs-* fields.

 -- Debian/Kubuntu KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>  Thu, 19 Sep 2019 19:46:31 +0200

libqapt (3.0.4-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * apt 2.0 porting (Closes: #953308)
    - Port to APT 1.9.0
    - Import earlier upstream commit that fixes supportedUntil and happens
      to fix some more apt 1.9 related failures.
    -  Adapt to apt 1.9.11.

 -- Julian Andres Klode <jak@debian.org>  Sun, 08 Mar 2020 15:33:23 +0100

libqapt (3.0.4-1) unstable; urgency=medium

  * Team upload.
  * New upstream release.
  * Switch Vcs-* fields to salsa.debian.org.
  * Bump the debhelper compatibility to 11:
    - bump the debhelper build dependency to 11~
    - bump compat to 11
    - remove --parallel for dh, as now done by default
  * Bump Standards-Version to 4.1.4, no changes required.
  * Switch from dh_install to dh_missing for --fail-missing.
  * Update install files.
  * Use https for Format in copyright.

 -- Pino Toscano <pino@debian.org>  Fri, 27 Apr 2018 05:57:29 +0200

libqapt (3.0.3-2) unstable; urgency=medium

  * Team upload.
  * Bump Standards-Version to 4.1.2, no changes required.
  * Bump Priority of transitional gstreamer0.10-qapt to optional.
  * Switch libqapt3 to section libs.
  * Update symbols file.
  * Switch the transitional plasma-framework-dev build dependency to
    libkf5plasma-dev.
  * Use also the dh pkgkde_symbolshelper addon to handle symbols file with
    substitutions.
  * Update lintian overrides.
  * Use https in the watch file.

 -- Pino Toscano <pino@debian.org>  Sat, 23 Dec 2017 13:58:04 +0100
