@@ -14,6 +14,7 @@ libqapt (3.0.5-0r1) UNRELEASED; urgency=medium
     - apt-1.9.0.patch: drop, fixed upstream
     - apt-1.9.11.patch: drop, fixed upstream
   * Update Vcs-* fields.
+  * Add the configuration for the CI on salsa.
 
  -- Debian/Kubuntu KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>  Thu, 19 Sep 2019 19:46:31 +0200
 
